--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,22 +3,36 @@ body {
     padding: 0;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    position: relative;
 
-#matter {
-    height: 100dvh;
     width: 50dvh;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 100vw;
 }
 
-#matter > canvas {
-    width: 100%;
+
+#score {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#title-screen {
+    width: 512px;
+
+    width: 50dvh;
     max-width: 100vw;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: rgba(0, 0, 200, 0.0);
 }
