--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,6 +47,10 @@ canvas {
     background-color: rgba(0, 0, 200, 0.0);
 }
 
+#title-screen p {
+    font-size: 2dvh;
+}
+
 #logo {
     width: 70%;
 
